===============================================================================
Preliminary notes:
------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 5.0.0 2014/xx/xx
=========================
! refactor many futures.


version 4.0.11 2014/xx/xx
=========================
* fix trident rotation bug.
* use 'white-space:pre' instead of tag name.
* fix bug about rotation of alphabet in IE9+.
o add Config.iboxEnable for security reason.
o add Tag::getDatasetAttrsRaw to get attributes with "data-" prefixes.
o support z-index
o support position:absolute
o enabled vert-glyph for safari(ver >= 5)

version 4.0.10, 2013/12/04
=========================
* fix typo in text-empha-style(double circle).
o enabled title attribute for link tag.

version 4.0.9, 2013/12/04
=========================
! rewrite class inheritance(closure library based) for faster constructor.

version 4.0.8, 2013/11/28
=========================
* fix some illegal header-context overwriting.

version 4.0.7, 2013/11/22
=========================
* fix css for Meiryo font trouble(not displayed properly in some charactors).

version 4.0.6, 2013/11/18
==========================
* fix bug about anchor data in document-context(caused by typo).

version 4.0.5, 2013/11/18
==========================
* fix bug about outline-context when secondary section root(like figure) appears.

version 4.0.4, 2013/11/14
==========================
* fix font color of image charactor bug in IE,Firefox.

version 4.0.3, 2013/11/14
==========================
o improve inline performance
o now onload(which takes functional value) is available for all selector.
o now nth-child, nth-of-type available as functional value.
o support display:none.

version 4.0.2, 2013/07/09
==========================
o use requestAnimationFrame if enable.