@@ -141,8 +141,8 @@ module.exports = function(grunt) {
 	    "src/kerning.js",
 	    "src/logical-float.js",
 	    "src/logical-floats.js",
-	    "src/logical-break.js",
-	    "src/logical-breaks.js",
+	    //"src/logical-break.js",
+	    //"src/logical-breaks.js",
 	    "src/text-align.js",
 	    "src/style-context.js",
 	    "src/layout-context.js",
