@@ -1,0 +1,19 @@
+var LogicalBreak = (function(){
+  function LogicalBreak(value){
+    this.value = value;
+  }
+
+  LogicalBreak.prototype = {
+    isAlways : function(){
+    },
+    isAvoid : function(){
+    },
+    isFirst : function(){
+    },
+    isNth : function(order){
+    }
+  };
+
+  return LogicalBreak;
+})();
+
